--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mld",
+  "name": "midtenndieselweb",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://midtenndiesel.github.io/midtenndieselweb/",
