--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mld",
+  "name": "my-project",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://midtenndiesel.github.io/midtenndieselweb/",
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
